# tms_online_shop

./: .flake8  .gitignore  README.md  pyproject.toml
online_shop/: manage.py
online_shop/.github/workflows/: pre-commit.yaml
online_shop/online_shop/: asgi.py  settings.py  urls.py  wsgi.py
online_shop/orders/: admin.py  models.py  serializers.py  urls.py
online_shop/orders/api/v1/: urls.py
online_shop/orders/api/v1/endpoints/: carts.py  orders.py
online_shop/orders/migrations/: 0001_initial.py
online_shop/orders/services/: cart_service.py  order_service.py
online_shop/products/: admin.py  models.py  urls.py
online_shop/products/api/v1/: endpoints.py  serializers.py  urls.py
online_shop/products/migrations/: 0001_initial.py  0002_rename_id_brend_product_brend_and_more.py  0003_alter_product_price.py
online_shop/token_jwt/: urls.py
online_shop/token_jwt/api/v1/: urls.py
online_shop/users/: admin.py  models.py  urls.py
online_shop/users/api/v1/: serializers.py  urls.py
online_shop/users/api/v1/endpoints/: auth.py
online_shop/users/migrations/: 0001_initial.py
online_shop/users/services/: auth_service.py
